# ilattice-rs

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
crates/grid-ray/: Cargo.toml
crates/grid-ray/src/: lib.rs
crates/ilattice/: Cargo.toml
crates/ilattice/src/: aabb.rs  extent.rs  lib.rs  morton.rs  vector.rs
crates/ilattice/src/vector_impls/: glam.rs
src/: extent.rs  lib.rs  morton.rs  vector.rs  vector_impls.rs
src/vector_impls/: glam.rs
