[package]
name = "ilattice"
version = "0.1.0"
description = "2 and 3-dimensional integer lattice math."
edition = "2018"
keywords = ["vector", "integer", "math", "3D", "morton"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["glam"] # The default vector impls.

[dependencies]
morton-encoding = { version = "2.0", optional = true }
glam = { git = "https://github.com/bitshifter/glam-rs", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
