[package]
name = "grid-ray"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["glam"]
glam = ["ilattice/glam"]

[dependencies]
ilattice = { git = "https://github.com/bonsairobo/ilattice-rs", rev = "9f76041793bb49de30daaaad758b9c9095f93e51", default-features = false }
